Docs - Se realiza ajuste en documentaciòn
